common-applications/control/mail/mailcore.yaml
# StatefulSet for mail core service
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mailman-core
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-core-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-core-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-core-service
    spec:
      containers:
        - name: mailman-core
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-core-new-build:993e326773627c625602f93429a7645537362b8c1672803306
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman/
              name: mailman-core-volume
      volumes:
        - name: mailman-core-volume
          persistentVolumeClaim:
            claimName: config-vol
