common-applications/control/mail/mtaservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-exim4-service
  namespace: mail
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 78db0c9c-17eb-497a-afa5-7101a5ba0e4f
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  #We need set this into 'Local' since we need get the client IP for relay excluding.
  externalTrafficPolicy: Local
  loadBalancerIP: 94.74.106.235
  ports:
  - port: 25
    name: exim4-port
    targetPort: 25
    protocol: TCP
  - port: 465
    name: exim4-port-2
    targetPort: 465
    protocol: TCP
  selector:
    component: mail-exim4-service
  type: LoadBalancer

# StatefulSet for exim4 services
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mailman-exim4
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-exim4-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-exim4-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-exim4-service
    spec:
      containers:
        - name: mailman-exim4
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-exim-new-build:3d97dff8206e4262c0fa2e218cdacb40e168c56a1672141405
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman/
              name: mailman-core-data
            - name: mailman-secrets
              mountPath: /etc/exim/passwd
              subPath: exim4_credential
            - name: mailman-cert-secrets
              mountPath: /etc/exim/ssl_pool/lists.osinfra.cn.crt
              subPath: server_crt
            - name: mailman-cert-secrets
              mountPath: /etc/exim/ssl_pool/lists.osinfra.cn.key
              subPath: server_key
            - name: mailman-cert-secrets-foropenhetu-volume
              mountPath: /etc/exim/ssl_pool/lists.openhetuengine.org.crt
              subPath: server_crt
            - name: mailman-cert-secrets-foropenhetu-volume
              mountPath: /etc/exim/ssl_pool/lists.openhetuengine.org.key
              subPath: server_key
            - name: mailman-secrets
              mountPath: /etc/exim/dkim/dkim.key
              subPath: dkim_key
            - name: exim-config
              mountPath: /etc/exim/exim.conf
              subPath: exim_conf
          # NOTE: since we added new configuration files we need reload exim4 and start up
          # 1. password used for exim4 login
          # 2. exim4.crt used for host certificate verification
          # 3. exim4.key used for message encryption
          command:
            - /bin/sh
            - -c
            - |
              exec tini -- exim -bd -v;
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-exim4-configmap-volume
          configMap:
            name: mailman-exim4-configmap
        - name: mailman-core-data
          persistentVolumeClaim:
            claimName: config-vol
        - name: mailman-secrets
          secret:
            secretName: mailman-secrets
        - name: mailman-cert-secrets
          secret:
            secretName: mailman-cert-secrets
        - name: mailman-cert-secrets-foropenhetu-volume
          secret:
            secretName: mailman-cert-secrets-foropenhetu
        - name: exim-config
          configMap:
            name: exim-configmap
