common-applications/control/mail/webservice.yaml
# Config web service
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-web-service
  namespace: mail
spec:
  ports:
  - port: 80
    name: website-port-http
    targetPort: 8000
    protocol: TCP
  selector:
    component: mail-web-service
  type: ClusterIP

# Deployment for mail web service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-web
  namespace: mail
  labels:
    component: mail-web-service
    app: mail-suit-service
spec:
  replicas: 2
  selector:
    matchLabels:
      component: mail-web-service
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-web-service
        app: mail-suit-service
    spec:
      hostname: mailman-web
      containers:
        - name: mailman-web
          # We modified the mail-web image to add static folder.
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-web-new-build:9757a0f54ef78028731eb44f18abd9c5a548e2211672195591
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /opt/mailman-web-static
            name: mailman-web-volume
        - name: nginx-web
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx:latest
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: mailman-nginx-configmap-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: mailman-nginx-configmap-volume
              subPath: default.conf
            - mountPath: /opt/mailman-web-static
              name: mailman-web-volume
      volumes:
        - name: mailman-web-volume
          emptyDir: {}
        - name: mailman-nginx-configmap-volume
          configMap:
            name: mailman-nginx-configmap
