common-applications/control/mail/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/$ https://mailweb.osinfra.cn/postorius/lists/;
  name: mailmanweb-ingress-for-osinfra
spec:
  tls:
    - hosts:
        - mailweb.osinfra.cn
      secretName: mailman-cert-secrets
  rules:
    - host: mailweb.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mailman-web-service
              servicePort: 80
            path: /
